Empezando seccion productos

--- a/index.html
+++ b/index.html
@@ -9,20 +9,31 @@
 </head>
 <body>
     <header>
-        <nav>
-            <ul>
-                <li>Home</li>
-                <li>Productos</li>
-                <li><a href="#"><img src="./IMAGENES/Logo/LogoHumaya100x100.png" alt=""></a></li>
-                <li>Locales</li>
-                <li>Contactos</li>
+        <nav class="navbar">
+            <ul class="navbar-li-container">
+                <li class="nav-item"> <a class="nav-link" href="#"><img class="logo" src="./IMAGENES/Logo/LogoHumaya100x100.png" alt=""></a></li>
+                <li class="nav-item"> <a class="nav-link" href="#">Productos</a> </li>
+                <li class="nav-item"> <a class="nav-link" href="#">Locales</a> </li>
+                <li class="nav-item"> <a class="nav-link" href="#">Contactos</a> </li>
             </ul>
         </nav>
     </header>
     
     <main>
 
+        <section class="conocenos">
+            <div class="conocenos-container">
+                <h2>DULCES DEL ALMA</h2>
+                <p>Los productos HUMAYA son elaborados desde hace más de 50 años fiel a las tradiciones familiares y sabores caseros, acompañándote en los momentos más importantes de la vida.</p>
+                <button class="btn-conocenos">CONOCENOS</button>    
+            </div>
+            <img class="bg-conocenos" src="./IMAGENES/Central/imagenCentral.png" alt="">                
+        </section>
         
+        <section class="productos">
+            <h2>PRODUCTOS</h2>
+        </section>
+
     </main>
 
     <footer>
