Hecho hasta Productos

--- a/index.html
+++ b/index.html
@@ -32,6 +32,42 @@
         
         <section class="productos">
             <h2>PRODUCTOS</h2>
+            <div class="ddlt-container">
+                <img class="producto-img" src="./IMAGENES/Productos/Producto1.png" alt="">
+                <div class="ddlt">
+                    <h2>DULCE DE LECHE TRADICIONAL</h2>
+                    <p class="productos-p">Elaboración artesanal de principio a fin, con un sabor intenso, receta tradicional</p>
+                    <p class="productos-p-bold">Presentación en frasco de vidrio de 580gr.</p>
+                    <button class="btn-info">+ INFO</button>
+                </div>
+            </div>
+            <div class="ddlsa-container">
+                <div class="ddlsa">
+                    <h2>DULCE DE LECHE SIN AZÚCAR</h2>
+                    <p class="productos-p">Elaboración artesanal para cuidar tu silueta sin rununciar a nada, endulzado naturalmente con stevia.</p>
+                    <p class="productos-p-bold">Presentación en frasco de vidrio de 580gr y 280gr.</p>
+                    <button class="btn-info">+ INFO</button>
+                </div>
+                <img class="producto-img" src="./IMAGENES/Productos/Producto2.png" alt="">
+            </div>
+            <div class="dcn-container">
+                <img class="producto-img" src="./IMAGENES/Productos/Producto3.png" alt="">
+                <div class="dcn">
+                    <h2>DULCE CHOCONUTT</h2>
+                    <p class="productos-p">Elaboración artesanal para el capricho dulce, combinación de dulce de leche, chocolate y pasta de avellanas. Una delicia única</p>
+                    <p class="productos-p-bold">Presentación en frasco de vidrio de 280gr.</p>
+                    <button class="btn-info">+ INFO</button>
+                </div>
+            </div>
+            <div class="adm-container">
+                <div class="adm">
+                    <h2>ALFAJORES DE MAICENA</h2>
+                    <p class="productos-p">Alfajores de dulce con coco rallado, relleno con 2cm de pura dulzura. Pudiendo elegir entre dulce de leche tradicional, light o choconutt</p>
+                    <p class="productos-p-bold">Presentación en caja de 6 y 12 alfajores.</p>
+                    <button class="btn-info">+ INFO</button>
+                </div>
+                <img class="producto-img-adm" src="./IMAGENES/Productos/Producto4.png" alt="">
+            </div>
         </section>
 
     </main>
