Responsive casi terminado, falta menu hamburguesa

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HUMAYA</title>
     <link rel="stylesheet" href="./styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Martel:wght@200;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -75,7 +78,7 @@
             <div class="calidad-img-container">
                 <div class="organico-container">
                     <img class="calidad-img" src="./IMAGENES/SVG/Organico.png" alt="">
-                    <p class="calidad-p">100% ORGÁNICO</p>
+                    <p class="calidad-p">100% <br> ORGÁNICO</p>
                 </div>
                 <div class="tacc-container">
                     <img class="calidad-img" src="./IMAGENES/SVG/LibreDeGluten.png" alt="">
@@ -83,7 +86,7 @@
                 </div>
                 <div class="conservantes-container">
                     <img class="calidad-img" src="./IMAGENES/SVG/SinConservantes.png" alt="">
-                    <p class="calidad-p">SIN CONSERVANTES</p>
+                    <p class="calidad-p">SIN <br> CONSERVANTES</p>
                 </div>
             </div>
         </section>
