--- a/index.html
+++ b/index.html
@@ -9,12 +9,21 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Martel:wght@200;400;600&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/861f8a35f6.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
+
     <header>
         <nav id="conocenos" class="navbar">
+            <div class="bar-btn-and-logo-container">
+                <a class="nav-link" href="#"><img class="logo" src="./IMAGENES/Logo/LogoHumaya100x100.png" alt=""></a>
+                <input type="checkbox" id="check">
+                <label for="check">
+                    <i id="bar-btn" class="fa-solid fa-bars"></i>
+                </label>    
+            </div>
             <ul class="navbar-li-container">
-                <li class="nav-item"> <a class="nav-link" href="#"><img class="logo" src="./IMAGENES/Logo/LogoHumaya100x100.png" alt=""></a></li>
                 <li class="nav-item"> <a class="nav-link" href="#productos">Productos</a> </li>
                 <li class="nav-item"> <a class="nav-link" href="#">Locales</a> </li>
                 <li class="nav-item"> <a class="nav-link" href="#contactanos">Contactanos</a> </li>
