--- a/index.html
+++ b/index.html
@@ -9,20 +9,17 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Martel:wght@200;400;600&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/861f8a35f6.js" crossorigin="anonymous"></script>
-</head>
+    <script src="https://kit.fontawesome.com/861f8a35f6.js" crossorigin="anonymous"></script></head>
 
 <body>
 
     <header>
         <nav id="conocenos" class="navbar">
-            <div class="bar-btn-and-logo-container">
-                <a class="nav-link" href="#"><img class="logo" src="./IMAGENES/Logo/LogoHumaya100x100.png" alt=""></a>
-                <input type="checkbox" id="check">
-                <label for="check">
-                    <i id="bar-btn" class="fa-solid fa-bars"></i>
-                </label>    
-            </div>
+            <a class="nav-link" href="#"><img class="logo" src="./IMAGENES/Logo/LogoHumaya100x100.png" alt=""></a>
+            <input type="checkbox" id="check">
+            <label for="check">
+                <i class="fa-solid fa-bars" id="bar-btn"></i>
+            </label>    
             <ul class="navbar-li-container">
                 <li class="nav-item"> <a class="nav-link" href="#productos">Productos</a> </li>
                 <li class="nav-item"> <a class="nav-link" href="#">Locales</a> </li>
@@ -39,15 +36,13 @@
                 <p>Los productos HUMAYA son elaborados desde hace más de 50 años fiel a las tradiciones familiares y sabores caseros, acompañándote en los momentos más importantes de la vida.</p>
                 <button class="btn-conocenos">CONOCENOS</button>    
             </div>
-            <img class="bg-conocenos" src="./IMAGENES/Central/imagenCentral.png" alt="">                
         </section>
         
         <section id="productos" class="productos">
             <h2>PRODUCTOS</h2>
             <div class="ddlt-container">
-                <img class="producto-img" src="./IMAGENES/Productos/Producto1.png" alt="">
                 <div class="ddlt">
-                    <h2>DULCE DE LECHE TRADICIONAL</h2>
+                    <h3 class="productos-h3">DULCE DE LECHE TRADICIONAL</h3>
                     <p class="productos-p">Elaboración artesanal de principio a fin, con un sabor intenso, receta tradicional</p>
                     <p class="productos-p-bold">Presentación en frasco de vidrio de 580gr.</p>
                     <button class="btn-info">+ INFO</button>
@@ -55,17 +50,15 @@
             </div>
             <div class="ddlsa-container">
                 <div class="ddlsa">
-                    <h2>DULCE DE LECHE SIN AZÚCAR</h2>
+                    <h3 class="productos-h3">DULCE DE LECHE SIN AZÚCAR</h3>
                     <p class="productos-p">Elaboración artesanal para cuidar tu silueta sin rununciar a nada, endulzado naturalmente con stevia.</p>
                     <p class="productos-p-bold">Presentación en frasco de vidrio de 580gr y 280gr.</p>
                     <button class="btn-info">+ INFO</button>
                 </div>
-                <img class="producto-img" src="./IMAGENES/Productos/Producto2.png" alt="">
             </div>
             <div class="dcn-container">
-                <img class="producto-img" src="./IMAGENES/Productos/Producto3.png" alt="">
                 <div class="dcn">
-                    <h2>DULCE CHOCONUTT</h2>
+                    <h3 class="productos-h3">DULCE CHOCONUTT</h3>
                     <p class="productos-p">Elaboración artesanal para el capricho dulce, combinación de dulce de leche, chocolate y pasta de avellanas. Una delicia única</p>
                     <p class="productos-p-bold">Presentación en frasco de vidrio de 280gr.</p>
                     <button class="btn-info">+ INFO</button>
@@ -73,17 +66,16 @@
             </div>
             <div class="adm-container">
                 <div class="adm">
-                    <h2>ALFAJORES DE MAICENA</h2>
+                    <h3 class="productos-h3">ALFAJORES DE MAICENA</h3>
                     <p class="adm-p">Alfajores de dulce con coco rallado, relleno con 2cm de pura dulzura. Pudiendo elegir entre dulce de leche tradicional, light o choconutt</p>
                     <p class="adm-p-bold">Presentación en caja de 6 y 12 alfajores.</p>
                     <button class="btn-info-adm">+ INFO</button>
                 </div>
-                <img class="producto-img-adm" src="./IMAGENES/Productos/Producto4.png" alt="">
             </div>
         </section>
 
         <section class="calidad">
-            <h2>La mejor calidad para vos</h2>
+            <h2>La mejor calidad <br> para vos</h2>
             <div class="calidad-img-container">
                 <div class="organico-container">
                     <img class="calidad-img" src="./IMAGENES/SVG/Organico.png" alt="">
@@ -103,7 +95,6 @@
         <section id="contactanos" class="contactanos">
             <h2>Contáctanos</h2>
             <div class="contactanos-container">
-                <img class="contactanos-img" src="./IMAGENES/ConocenosIMG.png" alt="">
                 <div class="contactanos-form">
                     <p class="contactanos-p">Dejanos tu consulta y nuestro personal se pondrá en contacto a la brevedad</p>
                     <form class="form" action="">
@@ -127,7 +118,7 @@
                     <h3 class="h3-recetas">CONITOS</h3>
                     <p class="p-recetas">Una deliciosa opción para acompañar las meriendas, ese antojo de media noche o compartir con amigos.</p>
                     <button class="btn-preparacion">PREPARACIÓN</button>
-                </div>                
+                </div>
                 <div class="pepas-container">
                     <img class="img-recetas" src="./IMAGENES/RecetasGalletitas.png" alt="">
                     <h3 class="h3-recetas">PEPAS</h3>
