falta el footer

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <section id="productos" class="productos">
             <h2>PRODUCTOS</h2>
             <div class="ddlt-container">
+                <img src="./IMAGENES/Productos/Producto1.png" alt="" class="ddlt-img">
                 <div class="ddlt">
                     <h3 class="productos-h3">DULCE DE LECHE TRADICIONAL</h3>
                     <p class="productos-p">Elaboración artesanal de principio a fin, con un sabor intenso, receta tradicional</p>
@@ -55,8 +56,10 @@
                     <p class="productos-p-bold">Presentación en frasco de vidrio de 580gr y 280gr.</p>
                     <button class="btn-info">+ INFO</button>
                 </div>
+                <img src="./IMAGENES/Productos/Producto2.png" alt="" class="ddlsa-img">
             </div>
             <div class="dcn-container">
+                <img src="./IMAGENES/Productos/Producto3.png" alt="" class="dcn-img">
                 <div class="dcn">
                     <h3 class="productos-h3">DULCE CHOCONUTT</h3>
                     <p class="productos-p">Elaboración artesanal para el capricho dulce, combinación de dulce de leche, chocolate y pasta de avellanas. Una delicia única</p>
@@ -71,11 +74,12 @@
                     <p class="adm-p-bold">Presentación en caja de 6 y 12 alfajores.</p>
                     <button class="btn-info-adm">+ INFO</button>
                 </div>
+                <img src="./IMAGENES/Productos/Producto4.png" alt="" class="adm-img">
             </div>
         </section>
 
         <section class="calidad">
-            <h2>La mejor calidad <br> para vos</h2>
+            <h2>La mejor calidad para vos</h2>
             <div class="calidad-img-container">
                 <div class="organico-container">
                     <img class="calidad-img" src="./IMAGENES/SVG/Organico.png" alt="">
@@ -95,6 +99,7 @@
         <section id="contactanos" class="contactanos">
             <h2>Contáctanos</h2>
             <div class="contactanos-container">
+                <img src="./IMAGENES/ConocenosIMG.png" alt="" class="contactanos-img">
                 <div class="contactanos-form">
                     <p class="contactanos-p">Dejanos tu consulta y nuestro personal se pondrá en contacto a la brevedad</p>
                     <form class="form" action="">
@@ -139,7 +144,9 @@
     <footer>
         <h2>Encontranos en:</h2>
         <div class="footer-container">
-            <img class="logo-footer" src="./IMAGENES/Logo/LogoHumaya100x100.png" alt="">
+            <div class="logo-footer-container">
+                <img class="logo-footer" src="./IMAGENES/Logo/LogoHumaya100x100.png" alt="">
+            </div>
             <div class="footer-menu-container">
                 <h3 class="h3-footer">MENÚ</h3>
                 <a class="a-footer" href="#conocenos">Home</a>
