--- a/index.html
+++ b/index.html
@@ -9,21 +9,22 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Martel:wght@200;400;600&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/861f8a35f6.js" crossorigin="anonymous"></script></head>
+    <script src="https://kit.fontawesome.com/861f8a35f6.js" crossorigin="anonymous"></script>
+</head>
 
 <body>
 
     <header>
         <nav id="conocenos" class="navbar">
             <a class="nav-link" href="#"><img class="logo" src="./IMAGENES/Logo/LogoHumaya100x100.png" alt=""></a>
-            <input type="checkbox" id="check">
+            <input type="checkbox" id="check" onclick="myFunction()">
             <label for="check">
                 <i class="fa-solid fa-bars" id="bar-btn"></i>
             </label>    
-            <ul class="navbar-li-container">
-                <li class="nav-item"> <a class="nav-link" href="#productos">Productos</a> </li>
-                <li class="nav-item"> <a class="nav-link" href="#">Locales</a> </li>
-                <li class="nav-item"> <a class="nav-link" href="#contactanos">Contactanos</a> </li>
+            <ul class="navbar-li-container hidden" id="nav-items">
+                <li class="nav-item"> <a onclick="myFunction()" class="nav-link" href="#productos">Productos</a> </li>
+                <li class="nav-item"> <a onclick="myFunction()" class="nav-link" href="#">Locales</a> </li>
+                <li class="nav-item"> <a onclick="myFunction()" class="nav-link" href="#contactanos">Contactanos</a> </li>
             </ul>
         </nav>
     </header>
@@ -174,7 +175,7 @@
             </div>
         </div>
     </footer>
-
+    <script src="./app.js"></script>
 </body>
 </html>
 
